--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,10 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://192.168.1.71/sell?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://192.168.1.71/Sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
+    database: mysql
 server:
   context-path: /sell
 
