--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,15 +7,11 @@ spring:
   jpa:
     show-sql: true
     database: mysql
+  jackson:
+    default-property-inclusion: non_null
 server:
   context-path: /sell
 
-#logging:
-#  pattern:
-#    console: "%d - %msg%n"
-##  path: /var/log/tomcat/
-#  file: /var/log/tomcat/sell.log
-#  level:
-#    com.imooc.LoggerTest: debug
+
 logging:
   level:
